tests/ui/type-alias-impl-trait/multiple-def-uses-in-one-fn-lifetimes.stderr
error: opaque type used twice with different lifetimes
  --> $DIR/multiple-def-uses-in-one-fn-lifetimes.rs:7:5
   |
LL |     (i, j)
   |     ^^^^^^
   |     |
   |     lifetime `'x` used here
   |     lifetime `'y` previously used here
   |
note: if all non-lifetime generic parameters are the same, but the lifetime parameters differ, it is not possible to differentiate the opaque types
  --> $DIR/multiple-def-uses-in-one-fn-lifetimes.rs:7:5
   |
LL |     (i, j)
   |     ^^^^^^

error: aborting due to 1 previous error

